# Design-and-Control-of-Cube-Drone

./: README.md
lio_imm/: CMakeLists.txt  package.xml
lio_imm/cfg/: liom.yaml  params.yaml
lio_imm/include/liom/: liom.h  map.h  odom.h  utils.h
lio_imm/launch/: liom.launch.py  liom.rviz
lio_imm/results/: trajectory.txt
lio_imm/src/lio_imm/: map.cc  map_node.cc  odom.cc  odom_node.cc
lio_imm/src/nano_gicp/: lsq_registration.cc  nano_gicp.cc  nanoflann.cc
nmpcsmccube/: CMakeLists.txt  package.xml
nmpcsmccube/launch/: default.launch.py  wall.launch.py
nmpcsmccube/src/: cubeplugin.cc  lidartrajectoryceiling.cpp  lidartrajectorywall.cpp  nmpcsmccube.cpp
nmpcsmccube/urdf/: cube.urdf.xacro
