<package format="3">

  <name>lio_imm</name>
  <version>1.1.1</version>

  <description>LiDAR-Inertial Odometry with IMM filtering</description>

  <maintainer email="anguyenduy@unr.edu">An D. Nguyen </maintainer>

  <author>An D Nguyen</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>
  <depend>image_transport</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
